--- a/AboutMe.ipynb
+++ b/AboutMe.ipynb
@@ -18,15 +18,19 @@
     "city = \"Begijnendijk\"\n",
     "country = \"Belgium\"\n",
     "whycoding = \"for fun\"\n",
+    "education = \"UCLL associate's degree in programming and the Data Minded Academy\"\n",
     "otherhobbies = \"climbing and diving\"\n",
+    "passion = \"dogs\"\n",
     "\n",
     "print(\"\"\"\n",
     "        Hi! My name is %s.\n",
     "        I\\'m %d years old.\n",
     "        I\\'m from %s, %s.\n",
     "        Why I\\'m coding - %s ofcourse!\n",
-    "        My other hobies are %s.\n",
-    "        What about you?\"\"\" %(name,age,city,country,whycoding,otherhobbies))"
+    "        I know what I know thanks to %s.\n",
+    "        My other hobbies are %s.\n",
+    "        Also, I love %s.\n",
+    "        What about you?\"\"\" %(name,age,city,country,whycoding,education,otherhobbies,passion))"
    ]
   },
   {
@@ -40,6 +44,13 @@
     "address = input(\"Where do you live? \")\n",
     "print(f\"Hi, my name is {name}. I am {age} years old and I live in {address}.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
